tools/tests/ui/fail/l1033.cnf
// Test file for error code: L1033
// Expected error: Missing Unterminated character in instruction sequence -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-missing".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
